Fix footer menu wrapping on mobile

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Description: A versatile WordPress theme with dynamic Google Fonts integration a
 Author: Chris Huber
 Author URI: https://chubes.net
 Theme URI: https://saraichinwag.com
-Version: 2.2.8
+Version: 2.2.9
 License: Custom
 License URI: https://saraichinwag.com/license
 Text Domain: sarai-chinwag
@@ -380,7 +380,8 @@ fill: #fff;
 
 #footer-menu {
     display: flex;
-    flex-direction:row;
+    flex-direction: row;
+    flex-wrap: wrap;
     list-style: none;
     margin: auto;
     justify-content: center;
